--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 26
@@ -21,9 +22,9 @@ android {
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug{
+        debug {
             minifyEnabled false
-            signingConfig  signingConfigs.debug
+            signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         signingConfigs {
@@ -51,4 +52,11 @@ dependencies {
     implementation files('libs/umeng_shareboard_widget.jar')
     implementation files('libs/umeng_social_shareboard.jar')
     implementation files('libs/umeng_social_shareview.jar')
+}
+// 在MobSDK的扩展中注册SMSSDK的相关信息
+MobSDK {
+    appKey "24b99b3559bf6"
+    appSecret "293020fe645bb0071f5737f2ccad1cde"
+
+    SMSSDK {}
 }
