--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.jtv.videodemo">
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -11,16 +12,15 @@
 	<!-- 硬件加速对X5视频播放非常重要，建议开启 -->
 	<uses-permission android:name="android.permission.GET_TASKS"/>
 
-
 	<!-- 友盟推荐的权限 -->
 	<!-- 添加如下权限，以便使用更多的第三方SDK和更精准的统计数据 -->
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-
-	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
 
 	<application
+		tools:replace="android:name"
 		android:name=".app.MyApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -63,14 +63,15 @@
 			android:name="UMENG_CHANNEL"
 			android:value="unknown"/>
 
-		<!--微信回调页面-->
-		<activity  android:name=".wxapi.WXEntryActivity"
-		          android:configChanges="keyboardHidden|orientation|screenSize"
-		          android:exported="true"
-		          android:screenOrientation="portrait"
-		          android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+		<!-- 微信回调页面 -->
+		<activity
+			android:name=".wxapi.WXEntryActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:exported="true"
+			android:screenOrientation="portrait"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
-		<!-- 友盟微博分享-->
+		<!-- 友盟微博分享 -->
 		<activity
 			android:name="com.umeng.socialize.media.WBShareCallBackActivity"
 			android:configChanges="keyboardHidden|orientation"
@@ -82,9 +83,7 @@
 			android:name="com.sina.weibo.sdk.web.WeiboSdkWebActivity"
 			android:configChanges="keyboardHidden|orientation"
 			android:exported="false"
-			android:windowSoftInputMode="adjustResize"
-			>
-
+			android:windowSoftInputMode="adjustResize">
 		</activity>
 		<activity
 			android:name="com.sina.weibo.sdk.share.WbShareTransActivity"
@@ -92,45 +91,44 @@
 			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY"/>
+
 				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
-
 		</activity>
-		<!-- 友盟支付宝分享-->
+		<!-- 友盟支付宝分享 -->
 		<activity
-		android:name=".apshare.ShareEntryActivity"
-		android:configChanges="keyboardHidden|orientation|screenSize"
-		android:exported="true"
-		android:screenOrientation="portrait"
-		android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+			android:name=".apshare.ShareEntryActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:exported="true"
+			android:screenOrientation="portrait"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
-		<!--友盟qq分享-->
+		<!-- 友盟qq分享 -->
 		<activity
 			android:name="com.tencent.tauth.AuthActivity"
 			android:launchMode="singleTask"
-			android:noHistory="true" >
-
+			android:noHistory="true">
 			<intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="tencent1106698043" />
+				<action android:name="android.intent.action.VIEW"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data android:scheme="tencent1106698043"/>
 			</intent-filter>
-
 		</activity>
-
 		<activity
 			android:name="com.tencent.connect.common.AssistActivity"
+			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:screenOrientation="portrait"
-			android:theme="@android:style/Theme.Translucent.NoTitleBar"
-			android:configChanges="orientation|keyboardHidden|screenSize"/>
-		<!--分享编辑页(只有新浪微博，精简版，豆瓣，人人，腾讯微博，领英，twitter需要)：-->
+			android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+		<!-- 分享编辑页(只有新浪微博，精简版，豆瓣，人人，腾讯微博，领英，twitter需要)： -->
 		<activity
 			android:name="com.umeng.socialize.editorpage.ShareActivity"
 			android:excludeFromRecents="true"
-			android:theme="@android:style/Theme.NoTitleBar"
-			/>
-
+			android:theme="@android:style/Theme.NoTitleBar"/>
+		<activity android:name=".activity.MobSMSActivity">
+		</activity>
 	</application>
 
 </manifest>
